@@ -48,7 +48,7 @@ class JsonFoldParserTest {
 
 		Assertions.assertEquals(1, folds.size());
 
-		Fold firstFold = folds.get(0);
+		Fold firstFold = folds.getFirst();
 		Assertions.assertEquals(FoldType.CODE, firstFold.getFoldType());
 		Assertions.assertEquals(0, firstFold.getStartOffset());
 		Assertions.assertEquals(code.lastIndexOf('}'), firstFold.getEndOffset());
