@@ -72,7 +72,7 @@ class LineHighlightManagerTest {
 		lhm.removeLineHighlight(tag1);
 		List<Object> remainingTags = lhm.getCurrentLineHighlightTags();
 		Assertions.assertEquals(1, remainingTags.size());
-		Assertions.assertSame(tag2, remainingTags.get(0));
+		Assertions.assertSame(tag2, remainingTags.getFirst());
 	}
 
 
@@ -89,7 +89,7 @@ class LineHighlightManagerTest {
 		lhm.removeLineHighlight(tag2);
 		List<Object> remainingTags = lhm.getCurrentLineHighlightTags();
 		Assertions.assertEquals(1, remainingTags.size());
-		Assertions.assertSame(tag1, remainingTags.get(0));
+		Assertions.assertSame(tag1, remainingTags.getFirst());
 	}
 
 
